<resources>
    <string name="app_name">Our diary</string>
    <string name="textSignUp">新規登録</string>
    <string name="textLogin">メールアドレスでログイン</string>
    <string name="btnLogin">ログイン</string>
    <string name="textResetPass"><u>パスワードを忘れた方はコチラ</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textTitleResetPass">パスワードリセット</string>
    <string name="textResetPass_exp">登録したメールアドレスにリセット用URLを送信します。</string>
    <string name="textSendMail">メールを送る</string>
    <string name="textToLoginMenu"><u>ログイン画面へ</u></string>
    <string name="textZatsugakuTitle">今日のざつがく</string>
    <string name="textUser">＜ユーザー名＞ の日記</string>
    <string name="textGoToCalendar"><u>カレンダーへ</u></string>
    <string name="textPrev">&lt;&lt; <u>mm/dd</u></string>
    <string name="textNext"><u>mm/dd</u> &gt;&gt;</string>
    <string name="textTitleFeelimgs">━ 気分をえらぶ ━</string>
    <string name="textTitleWether">━ 天気をえらぶ ━</string>
    <string name="textTitleGacha">━ テーマは何にする？ ━</string>
    <string name="buttonGacha">🔄 テーマを変える 🔄</string>
    <string name="buttonGachaRegistration">とうろくする</string>
    <string name="textTitleBlog">━ じゆうに日記を書いてみよう！ ━</string>
    <string name="passAttention">パスワードは6文字以上で入力してください。</string>
    <string name="btnCancel">キャンセル</string>
    <string name="btn_setting">せってい</string>
    <string name="textPrivacy">プライバシーポリシー</string>
    <string name="textView5">みんなの日記管理人（以下「管理人」と言います。）は、管理人の提供するサービス（以下「本サービス」と言います。）における、ユーザーについての個人情報を含む利用者情報の取扱いについて、以下のとおりプライバシーポリシー（以下「本ポリシー」と言います。）を定めます。<br />
        1. 収集する利用者情報及び収集方法  本ポリシーにおいて、「利用者情報」とは、ユーザーの識別に係る情報、その他ユーザーまたはユーザーの端末に関連して生成または蓄積された情報であって、本ポリシーに基づき管理人が収集するものを意味するものとします。<br />
        本サービスにおいて管理人が収集する利用者情報は、その収集方法に応じて、以下のようなものとなります。なお、ユーザー個人を特定できるような情報収集を行うことはありません。<br />
        (1) ユーザーからご提供いただく情報 本サービスを利用するために、または本サービスの利用を通じてユーザーから以下の情報をご提供いただく場合があります。 <br />
        ・メールアドレス  <br />
        (2) ユーザーが本サービスを利用するにあたって、管理人が収集する情報 当社は、本サービスへのアクセス状況やそのご利用方法に関する情報を収集することがあります。これには以下の情報が含まれます。<br />
        ・サーバーアクセスログに関する情報 <br />
        (3) サービス利用状況に関する情報 本サービスでは、ユーザーへのサービス提供のためユーザーが本サービスを通じて行った利用状況に関する情報を自動的に取得することがあります。なお、これらの情報の内、ユーザー間でやり取りされる非公開のコンテンツに関する内容等については、ユーザーの同意等が無い限り管理人は閲覧・利用することはありません。<br />
        2. 利用目的  本サービスのサービス提供にかかわる利用者情報の具体的な利用目的は以下のとおりです。<br />
        (1) 本サービスに関する登録の受付、ユーザー認証、ユーザー設定の記録、維持、保護及び改善のため <br />
        (2) 本サービスに関するご案内、お問い合わせ等への対応のため <br />
        (3) 本サービスに関する当社の規約、ポリシー等（以下「規約等」といいます。）に違反する行為に対する対応のため <br />
        (4) 本サービスに関する規約等の変更などを通知するため <br />
        3. 通知・公表または同意取得の方法、利用中止要請の方法  ユーザーは、本サービスの所定の設定を行うことにより、利用者情報の全部または一部についてその収集または利用の停止を求めることができ、この場合、管理人は速やかに、管理人の定めるところに従い、その利用を停止します。<br />
        なお利用者情報の項目によっては、その収集または利用が本サービスの前提となるため、管理人所定の方法により本サービスを退会した場合に限り、管理人はその収集または利用を停止します。<br />
        4. 第三者提供  管理人は、利用者情報のうち、個人情報については、あらかじめユーザーの同意を得ないで、第三者（日本国外にある者を含みます。）に提供しません。但し、次に掲げる必要があり第三者（日本国外にある者を含みます。）に提供する場合はこの限りではありません。<br />
        (1) 管理人が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合 <br />
        (2) 合併その他の事由による事業の承継に伴って個人情報が提供される場合 (3) 国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって、ユーザーの同意を得ることによって当該事務の遂行に支障を及ぼすおそれがある場合 <br />
        (4) その他、個人情報の保護に関する法律（以下「個人情報保護法」といいます。）その他の法令で認められる場合<br />
        5. お問い合わせ  本サービスに関する事項、ご要望、ご意見等は以下のメールアドレスまでご連絡下さい。<br />
        連絡先: n_ob2@hotmail.com<br />
        6. プライバシーポリシーの変更手続  管理人は、必要に応じて、本ポリシーを変更します。但し、法令上ユーザーの同意が必要となるような本ポリシーの変更を行う場合、変更後の本ポリシーは、管理人の定める所定の方法で変更に同意したユーザーに対してのみ適用されるものとします。  なお、管理人は、本ポリシーを変更する場合には、変更後の本ポリシーの施行時期及び内容を本サービス上での表示その他の適切な方法により周知し、またはユーザーに通知します。<br />
        【2021年1月22日作成】</string>
</resources>