<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GachaDiaryFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:hint="日付（ひづけ）"
                android:onClick="showDateDialog"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textTitleFeelimgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/textTitleFeelimgs"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

            <RadioGroup
                android:id="@+id/radioGroupFeelings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:checkedButton="@id/radioButtonSoso"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleFeelimgs">

                <RadioButton
                    android:id="@+id/radioButtonHappy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_happy"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/radioButtonSmile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_smile"
                    android:button="@null" />


                <RadioButton
                    android:id="@+id/radioButtonSoso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_soso"
                    android:button="@null" />


                <RadioButton
                    android:id="@+id/radioButtonAngry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_angry"
                    android:button="@null" />


                <RadioButton
                    android:id="@+id/radioButtonSad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_sad"
                    android:button="@null" />
            </RadioGroup>

            <TextView
                android:id="@+id/textTitleWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/textTitleWether"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupFeelings" />

            <RadioGroup
                android:id="@+id/radioGroupeWether"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:checkedButton="@+id/radioButtonSunny"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleWeather">

                <RadioButton
                    android:id="@+id/radioButtonSunny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_sunny"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/radioButtonCloudy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_cloudy"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/radioButtonRainy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_rainy"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/radioButtonSnow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_snow"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/radioButtonThunder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/segmented_thunder"
                    android:button="@null" />

            </RadioGroup>

            <TextView
                android:id="@+id/textTitleGacha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:text="@string/textTitleGacha"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupeWether" />

            <Button
                android:id="@+id/buttonGacha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:onClick="doGacha"
                android:text="@string/buttonGacha"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitleGacha" />

            <EditText
                android:id="@+id/textGacha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGacha" />

            <EditText
                android:id="@+id/editTextAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="テーマのこたえをじゆうに書いてみよう！"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textGacha" />

            <Button
                android:id="@+id/buttonGachaRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/buttonGachaRegistration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAnswer" />
        </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>